# webbitmq

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  build.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  supervisord.conf
.github/workflows/: backend_lint.yml  docker-image.yml  frontend.yml  tests.yml
backend/: Dockerfile  Dockerfile.dev  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
backend/app/: main.py
backend/app/api/api_v1/routers/: rabbit_handler.py
backend/app/core/: config.py  rabbit.py
backend/tests/: client.py  conftest.py
backend/tests/integrational/: conftest.py  test_sending_messages.py  test_server_managment.py
backend/tests/test_api/: test_server_managment.py
backend/tests/utils/: db.py
backend/webbit/: main.py
backend/webbit/api/routers/: api.py
backend/webbit/api/routers/managment/: __init__.py  server.py  settings.py
backend/webbit/api/routers/rabbit/: __init__.py  queue.py  rabbit_handler.py  server.py  server_managment.py
backend/webbit/core/: config.py  consts.py  rabbit.py  schemas.py
backend/webbit/db/: models.py
backend/webbit/schemas/: queue.py
frontend/: .eslintrc.js  .prettierrc.js  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/public/: index.html
frontend/src/: App.module.scss  App.tsx  declarations.d.ts  hooks.tsx  index.tsx
frontend/src/components/AddQueueForm/: RabbitForm.tsx
frontend/src/components/AddServerForm/: AddServerForm.module.scss  AddServerForm.tsx
frontend/src/components/CountdownTimer/: CountdownTimer.module.scss  CountdownTimer.tsx
frontend/src/config/: index.tsx
frontend/src/contexts/: StoreContext.tsx
frontend/src/models/: queues.ts  servers.ts
frontend/src/stores/: QueueStore.ts  QueuesStore.ts  RootStore.ts  ServerStore.ts  ServersStore.ts  index.tsx
frontend/src/utils/: api.ts
frontend/src/views/: MainPage.tsx  RabbitDetailView.tsx
nginx/: combined-nginx.conf  nginx.conf
scripts/: lint  test
(+20 files in other folders)
